# myuuid

./: Cargo.toml  main.py  pyproject.toml
benches/: benchmark.rs
src/: lib.rs
